fix: update sharedDir path initialization to use Paths.get method